--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -4,6 +4,7 @@
   background: $mapBackground;
   width: calc(100% - #{$sidebarWidth});
   position: relative;
+  color: rgb(16, 134, 231); // 1086E7
 }
 
 .map-container{
