--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,3 +4,4 @@ $sidebarBackgroundLighter: rgb(76, 76, 76);
 $buttonColor: rgb(195, 228, 82);
 $buttonColorDisabled: rgb(200, 200, 200);
 $mapBackground: rgb(242, 242, 242);
+$minHeight: 768px;
