--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -4,7 +4,8 @@
   background: $mapBackground;
   width: calc(100% - #{$sidebarWidth});
   position: relative;
-  color: rgb(16, 134, 231); // 1086E7
+  color: rgb(16, 134, 231);
+  min-height: $minHeight;
 }
 
 .map-container{
