--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  min-height: $minHeight;
   h3{
     margin: 0 10px 0;
     padding-bottom: 20px;
